feat(authorization): support permission updates
