# docs/swagger.json
@@ -278,6 +278,44 @@
                 }
             }
         },
+        "/api/v1/authorization/permissions/update": {
+            "post": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "authorization-permissions"
+                ],
+                "summary": "Update a tenant permission",
+                "parameters": [
+                    {
+                        "description": "Permission update",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/httptransport.UpdatePermissionRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/httptransport.Response"
+                        }
+                    }
+                }
+            }
+        },
         "/api/v1/authorization/role-permissions/grant": {
             "post": {
                 "security": [
@@ -973,6 +1011,32 @@
             ],
             "properties": {
                 "role_permission_id": {
+                    "type": "string"
+                },
+                "version": {
+                    "type": "integer"
+                }
+            }
+        },
+        "httptransport.UpdatePermissionRequest": {
+            "type": "object",
+            "required": [
+                "name",
+                "permission_id",
+                "status",
+                "version"
+            ],
+            "properties": {
+                "condition_expression": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "permission_id": {
+                    "type": "string"
+                },
+                "status": {
                     "type": "string"
                 },
                 "version": {
