# internal/transport/http/server.go
@@ -61,6 +61,7 @@ func NewServer(lc fx.Lifecycle, cfg config.Config, handler *Handler, authService
 	api.POST("/version", handler.Version)
 	api.POST("/me", handler.Me)
 	api.POST("/authorization/permissions/create", handler.CreatePermission)
+	api.POST("/authorization/permissions/update", handler.UpdatePermission)
 	api.POST("/authorization/permissions/list", handler.ListPermissions)
 	api.POST("/authorization/roles/create", handler.CreateRole)
 	api.POST("/authorization/roles/update", handler.UpdateRole)
